--- a/index.html
+++ b/index.html
@@ -6,10 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--<script src="https://kit.fontawesome.com/d478bebd52.js" crossorigin="anonymous"></script>-->
     <link rel="stylesheet" href="style.css">
-    <title>Project Number</title>
+    <title>Cards</title>
 </head>
 <body>
-    <h1>Project Number</h1>
+    <div class="container">
+        <div class="panel " style="background-image: url('https://unsplash.com/photos/OAePEg3V93A/download?ixid=MnwxMjA3fDB8MXx0b3BpY3x8Ym84alFLVGFFMFl8fHx8fDJ8fDE2NTY1MDc1MjI&force=true')">
+            <h3>Fly Away</h3>
+        </div><div class="panel active" style="background-image: url('https://unsplash.com/photos/fdBk7QqNTvY/download?ixid=MnwxMjA3fDB8MXx0b3BpY3x8Ym84alFLVGFFMFl8fHx8fDJ8fDE2NTY1MDc1MjI&force=true')">
+            <h3>Moon Fall</h3>
+        </div><div class="panel " style="background-image: url('https://unsplash.com/photos/X5REiD-cIlw/download?ixid=MnwxMjA3fDB8MXx0b3BpY3x8Ym84alFLVGFFMFl8fHx8fDJ8fDE2NTY1MDc1MjI&force=true')">
+            <h3>Climb that Wall</h3>
+        </div><div class="panel " style="background-image: url('https://unsplash.com/photos/p3B_Lwsbz2M/download?ixid=MnwxMjA3fDB8MXx0b3BpY3x8Ym84alFLVGFFMFl8fHx8fDJ8fDE2NTY1MDc1MjI&force=true')">
+            <h3>Mind over Matter</h3>
+        </div><div class="panel " style="background-image: url('https://unsplash.com/photos/MIBKmEyTgYU/download?ixid=MnwxMjA3fDB8MXx0b3BpY3x8Ym84alFLVGFFMFl8fHx8fDJ8fDE2NTY1MDc1MjI&force=true')">
+            <h3>Green Pastures</h3>
+        </div>
+
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
